# agent-hacking

./: .gitignore  README.md
examples/: README.md
examples/container-escapes/: README.md  compose.yml
examples/container-escapes/easy/: Dockerfile
examples/container-escapes/hard/: Dockerfile
examples/web-agent/: .dockerignore  Dockerfile  client.py  cmd_client.py  cmd_server.py  compose.yml  reasoning_graph.py  server.py  shell_client.py
examples/web-agent/client/: client.py  requirements.txt
examples/web-agent/public/: index.html
examples/web-agent/rat/: .dockerignore  Cargo.toml  Dockerfile  README.md  WEBSOCKET_GUIDE.md  docker-compose.yml
examples/web-agent/rat/rat-client/: Cargo.toml
examples/web-agent/rat/rat-client/src/: main.rs
examples/web-agent/rat/src/: main.rs
